--- a/nostdlib/sys/BUILD
+++ b/nostdlib/sys/BUILD
@@ -1,57 +1,57 @@
-load("@rules_cc//cc:defs.bzl", "cc_library")
+load("//nostdlib:nostdlib.bzl", "cc_nostdlib_library")
 
 package(default_visibility = ["//visibility:public"])
 
-cc_library(
+cc_nostdlib_library(
     name = "select",
     srcs = ["select.cc"],
     hdrs = ["select.hh"],
     deps = ["//nostdlib:arch"]
 )
 
-cc_library(
+cc_nostdlib_library(
     name = "stat",
     srcs = ["stat.cc"],
     hdrs = ["stat.hh"],
     deps = ["//nostdlib:arch"]
 )
 
-cc_library(
+cc_nostdlib_library(
     name = "wait",
     srcs = ["wait.cc"],
     hdrs = ["wait.hh"],
     deps = ["//nostdlib:arch"]
 )
 
-cc_library(
+cc_nostdlib_library(
     name = "time",
     srcs = ["time.cc"],
     hdrs = ["time.hh"],
     deps = ["//nostdlib:arch"]
 )
 
-cc_library(
+cc_nostdlib_library(
     name = "ioctl",
     srcs = ["ioctl.cc"],
     hdrs = ["ioctl.hh"],
     deps = ["//nostdlib:arch"]
 )
 
-cc_library(
+cc_nostdlib_library(
     name = "reboot",
     srcs = ["reboot.cc"],
     hdrs = ["reboot.hh"],
     deps = ["//nostdlib:arch"]
 )
 
-cc_library(
+cc_nostdlib_library(
     name = "mman",
     srcs = ["mman.cc"],
     hdrs = ["mman.hh"],
     deps = ["//nostdlib:arch"]
 )
 
-cc_library(
+cc_nostdlib_library(
     name = "mount",
     srcs = ["mount.cc"],
     hdrs = ["mount.hh"],
