--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,7 @@ jobs:
       DEBIAN_FRONTEND: noninteractive
     steps:
       # setup bazel
+      - run: apt-get install -y wget
       - run: wget https://github.com/bazelbuild/bazel/releases/download/6.3.2/bazel-6.3.2-linux-x86_64
       - run: chmod +x bazel-6.3.2-linux-x86_64
       - run: mv bazel-6.3.2-linux-x86_64 /usr/bin/bazel
@@ -33,6 +34,7 @@ jobs:
     resource_class: arm.medium
     steps:
       # setup bazel
+      - run: apt-get install -y wget
       - run: wget https://github.com/bazelbuild/bazel/releases/download/6.3.2/bazel-6.3.2-linux-arm64
       - run: chmod +x bazel-6.3.2-linux-arm64
       - run: sudo mv bazel-6.3.2-linux-arm64 /usr/bin/bazel
