--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       DEBIAN_FRONTEND: noninteractive
     steps:
       # setup bazel
-      - run: apt-get update && apt-get install -y wget git
+      - run: sudo apt-get update && sudo apt-get install -y wget git
       - run: wget https://github.com/bazelbuild/bazel/releases/download/6.3.2/bazel-6.3.2-linux-x86_64
       - run: chmod +x bazel-6.3.2-linux-x86_64
       - run: mv bazel-6.3.2-linux-x86_64 /usr/bin/bazel
@@ -29,8 +29,10 @@ jobs:
           command: "bazel test //... --test_output=all"
 
   build-and-test-aarch64:
-    machine:
-      image: ubuntu-2204:current
+    docker:
+      - image: cimg/base:2023.08
+    environment:
+      DEBIAN_FRONTEND: noninteractive
     resource_class: arm.medium
     steps:
       # setup bazel
