--- a/.bazelrc
+++ b/.bazelrc
@@ -1,3 +1,4 @@
 build --cxxopt='-std=c++2a'
 
 build --incompatible_enable_cc_toolchain_resolution
+build --action_env BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
