--- a/.bazelrc
+++ b/.bazelrc
@@ -2,3 +2,5 @@ build --cxxopt='-std=c++2a'
 
 build --incompatible_enable_cc_toolchain_resolution
 build --action_env BAZEL_DO_NOT_DETECT_CPP_TOOLCHAIN=1
+
+build --@io_bazel_rules_docker//transitions:enable=false
