--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       DEBIAN_FRONTEND: noninteractive
     steps:
       # setup bazel
-      - run: sudo apt-get update && sudo apt-get install -y wget git
+      - run: sudo apt-get update && sudo apt-get install -y wget git xorg
       - run: wget https://github.com/bazelbuild/bazel/releases/download/6.3.2/bazel-6.3.2-linux-x86_64
       - run: chmod +x bazel-6.3.2-linux-x86_64
       - run: sudo mv bazel-6.3.2-linux-x86_64 /usr/bin/bazel
@@ -36,7 +36,7 @@ jobs:
     resource_class: arm.medium
     steps:
       # setup bazel
-      - run: sudo apt-get update && sudo apt-get install -y wget git
+      - run: sudo apt-get update && sudo apt-get install -y wget git xorg
       - run: wget https://github.com/bazelbuild/bazel/releases/download/6.3.2/bazel-6.3.2-linux-arm64
       - run: chmod +x bazel-6.3.2-linux-arm64
       - run: sudo mv bazel-6.3.2-linux-arm64 /usr/bin/bazel
