[common] make double fork a library
This patch makes double fork a common library that can be used
to perform long running work in a new process without creating
zombie processes.

--- a/common/BUILD
+++ b/common/BUILD
@@ -178,3 +178,12 @@ cc_nostdlib_library(
     name = "math",
     hdrs = ["math.hh"],
 )
+
+cc_nostdlib_library(
+    name = "double_fork",
+    hdrs = ["double_fork.hh"],
+    deps = [
+        "//nostdlib:unistd",
+        "//nostdlib/sys:wait",
+    ],
+)
