[nostdlib] add memfd_create syscall wrapper
This PR adds a wrapper for memfd_create.

--- a/nostdlib/BUILD
+++ b/nostdlib/BUILD
@@ -1,3 +1,4 @@
+load("@rules_cc//cc:defs.bzl", "cc_library")
 load("//nostdlib:nostdlib.bzl", "cc_nostdlib_library")
 
 package(default_visibility = ["//visibility:public"])
